--- a/internet/all.html
+++ b/internet/all.html
@@ -1,64 +1,87 @@
-<html>
-<head>
-<style>
-button {
-font-size: 200%;
-width: 40px;
-}
+const display = document.getElementById("display");
+  
 
-input {
-font-size: 14px;
-height: 40px;
-text-align: right;
-}
+  const button1 = document.getElementById("button1");
+  const button2 = document.getElementById("button2");
+  const button3 = document.getElementById("button3");
+  const button4 = document.getElementById("button4");
+  const button5 = document.getElementById("button5");
+  const button6 = document.getElementById("button6");
+  const button7 = document.getElementById("button7");
+  const button8 = document.getElementById("button8");
+  const button9 = document.getElementById("button9");
+  const button0 = document.getElementById("button0");
+  
+ 
+  const addButton = document.getElementById("addButton");
+  const subtractButton = document.getElementById("subtractButton");
+  const multiplyButton = document.getElementById("multiplyButton");
+  const divideButton = document.getElementById("divideButton");
+  const clearButton = document.getElementById("clearButton");
+  const equalsButton = document.getElementById("equalsButton");
+  
 
-
-</style>
-</head>
-
-<body>
-
-<table>
-<tr>
-  <td colspan="4"><input id="display" name="display" ></input></td>
-</tr>
-
-<tr>
-  <td><button id="button1" value="1" onclick="display.value +='1'">1</button></td>
-  <td><button id="button2" value="2" onclick="display.value +='2'">2</button></td>
-  <td><button id="button3" value="3" onclick="display.value +='3'">3</button></td>
-  <td><button id="addButton" value="+" onclick="display.value +='+'" class="operator">+</button></td>
-</tr>
-<tr>
-  <td><button id="button4" value="4" onclick="display.value +='4'">4</button></td>
-  <td><button id="button5" value="5" onclick="display.value +='5'">5</button></td>
-  <td><button id="button6" value="6" onclick="display.value +='6'">6</button></td>
-  <td><button id="subtractButton" value="-" onclick="display.value +='-'" class="operator">-</button></td>
-</tr>
-<tr>
-  <td><button id="button7" value="7" onclick="display.value +='7'">7</button></td>
-  <td><button id="button8" value="8" onclick="display.value +='8'">8</button></td>
-  <td><button id="button9" value="9" onclick="display.value +='9'">9</button></td>
-  <td><button id="multiplyButton" value="*" onclick="display.value +='*'" class="operator">*</button></td>
-</tr>
-<tr>
-  <td><button id="clearButton" onclick="display.value = '' " class=" operator">C</button></td>
-  <td><button id="button0" value +="0" onclick="display.value='0'">0</button></td>
-  <td><button id="equalsButton" onclick="display.value = eval(display.value)" class="equal operator">=</button></td>
-  <td><button id="divideButton" onclick="display.value+='/'" class="operator">/</button></td>
-</tr>
-
-
-
-</table>
-
-<span id='output'><!-- Use this span for writing debug messages or anything else you think will help! --></span>
-
-<script src="calculator.js"></script>
-
-
-</body>
-
-
-
-</html>
+  button1.addEventListener("click", () => {
+    display.value += "1";
+  });
+  
+  button2.addEventListener("click", () => {
+    display.value += "2";
+  });
+  
+  button3.addEventListener("click", () => {
+    display.value += "3";
+  });
+  
+  button4.addEventListener("click", () => {
+    display.value += "4";
+  });
+  
+  button5.addEventListener("click", () => {
+    display.value += "5";
+  });
+  
+  button6.addEventListener("click", () => {
+    display.value += "6";
+  });
+  
+  button7.addEventListener("click", () => {
+    display.value += "7";
+  });
+  
+  button8.addEventListener("click", () => {
+    display.value += "8";
+  });
+  
+  button9.addEventListener("click", () => {
+    display.value += "9";
+  });
+  
+  button0.addEventListener("click", () => {
+    display.value += "0";
+  });
+  
+  // Add event listeners to the operator buttons
+  addButton.addEventListener("click", () => {
+    display.value += "+";
+  });
+  
+  subtractButton.addEventListener("click", () => {
+    display.value += "-";
+  });
+  
+  multiplyButton.addEventListener("click", () => {
+    display.value += "*";
+  });
+  
+  divideButton.addEventListener("click", () => {
+    display.value += "/";
+  });
+  
+  clearButton.addEventListener("click", () => {
+    display.value = "";
+  });
+  
+  equalsButton.addEventListener("click", () => {
+    display.value = eval(display.value);
+  });
